--- a/templates/home.html
+++ b/templates/home.html
@@ -28,10 +28,12 @@
 
     <main>
         <section class="principal-page-user">
-            <h1 id="username">Bienvenido {{ username }}</h1>
+            <p id="username-header" style="display: none;">{{ username }}</p>
+            <h1 id="username">Bienvenido </h1>
         </section>
     </main>
 
+    <script src="static/home.js"></script>
 </body>
 
 </html>
