--- a/templates/home.html
+++ b/templates/home.html
@@ -28,8 +28,8 @@
 
     <main>
         <section class="principal-page-user">
-            <p id="username-header" style="display: none;">{{ username }}</p>
-            <h1 id="username">Bienvenido </h1>
+            <p id="username-header" style="display: none;">{{ username }}😁</p>
+            <h1 id="username"></h1>
         </section>
     </main>
 
